k8s/gatekeeper/templates/ban-latest-tag.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: banlatesttag
spec:
  crd:
    spec:
      names:
        kind: BanLatestTag
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package banlatesttag
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("Container '%v' must not use ':latest' image tag", [container.name])
        }
